--- a/funnel/static/sass/_card.scss
+++ b/funnel/static/sass/_card.scss
@@ -27,6 +27,7 @@
       flex: 0 0 62%;
       margin: 0;
       padding: 0;
+      z-index: 3;
 
       .card__image {
         position: absolute;
